Sonar minor fixes